fix lib import code clean bump version code
Signed-off-by: Hao_cen <haocen.minecraft@qq.com>